# waf-reverse-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  docker-compose.yml  health_check.py  load_test.lua  prometheus.yml  requirements.txt  setup-repo.sh  setup.py  setup_deployment.py  setup_repo.py
config/: config.yaml  requirements.txt
deployment/docker/: Dockerfile
deployment/kubernetes/manifests/: deployment.yaml
deployment/monitoring/grafana/dashboards/: waf-overview.json
docs/: COMPLETION_REPORT.md  CONTRIBUTING.md  FEATURES_COMPREHENSIVE.md  QUICKSTART.md  REMAINING_VULNERABILITY_ASSESSMENT.md  RUST_COMPILATION_REPORT.md  RUST_QUICKSTART.md  SECURITY_ANALYSIS.md  SECURITY_FIXES_APPLIED.md  SECURITY_FIXES_TEST_REPORT.md  SETUP.md  TECHNICAL_SPECIFICATION.md  WAF_ReverseProxy_Checklist.md  aws_deployment.md
python_implementation/: Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  test_implementation.py
python_implementation/config/: config.yaml
python_implementation/examples/: nginx.conf
python_implementation/monitoring/: prometheus.yml
python_implementation/pywaf/: __init__.py  cli.py  main.py
python_implementation/pywaf/admin/: __init__.py  api.py
python_implementation/pywaf/core/: __init__.py  config.py  exceptions.py  proxy.py  ssl.py  waf.py
python_implementation/pywaf/monitoring/: __init__.py  health.py  metrics.py
python_wrapper/: Makefile  README.md  requirements.txt  setup.py
python_wrapper/examples/: demo.py
python_wrapper/tests/: test_basic.py
python_wrapper/waf_proxy/: __init__.py  cli.py  client.py  config.py  health.py  process.py
scripts/: generate_secure_config.py  health_check.py  security_check.sh  setup-repo.sh  setup.py  setup_deployment.py  setup_repo.py
src/: admin.rs  config.rs  error.rs  health.rs  main.rs  security.rs
src/observability/: logger.rs  metrics.rs  mod.rs
src/proxy/: cache.rs  engine.rs  load_balancer.rs  mod.rs  upstream.rs
src/ssl/: acme.rs  acme_client.rs  cert_manager.rs  mod.rs  storage.rs  tls_server.rs
src/waf/: bot_detection.rs  engine.rs  geo_blocking.rs  mod.rs  owasp.rs  rate_limiter.rs  rules.rs
tests/: load_test.py
