[package]
name = "waf-reverse-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance WAF and Reverse Proxy built in Rust"
license = "MIT"

[dependencies]
# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
headers = "0.4"
bytes = "1.0"
futures = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
config = "0.14"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Security and crypto
rustls = "0.23"
rustls-pemfile = "2.0"
jsonwebtoken = "9.0"
argon2 = "0.5"
regex = "1.10"

# Database and caching
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
dashmap = "5.5"
arc-swap = "1.6"
governor = "0.6"
ipnet = "2.9"

# HTTP client for upstream requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Performance monitoring
once_cell = "1.19"
parking_lot = "0.12"

# Geolocation
maxminddb = "0.24"

# SSL/TLS and certificate management
rcgen = "0.12"
async-trait = "0.1"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["redis", "database"]
redis = ["dep:redis"]
database = ["dep:sqlx"]
full = ["redis", "database"]
